# Copulas

./: .buildinfo  .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  CopulaModel.py  HISTORY.md  INSTALL.md  LICENSE  MANIFEST.in  Makefile  README.md  RELEASE.md  Untitled.ipynb  authors.html  contributing.html  copula.py  copulalib.py  copulas.bivariate.html  copulas.html  copulas.multivariate.html  copulas.univariate.html  example.py  genindex.html  history.html  index.html  install.html  installation.html  latest_requirements.txt  main.py  modules.html  objects.inv  py-modindex.html  pyproject.toml  readme.html  requirements.txt  requirements_dev.txt  search.html  searchindex.js  setup.cfg  (+7 more)
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: dependency_checker.yml  docs.yml  end_to_end.yml  lint.yml  minimum.yml  numerical.yml  prepare_release.yml  readme.yml  release.yml  tests.yml  tutorials.yml  unit.yml
_modules/: copulas.html  index.html
_modules/copulas/: datasets.html  errors.html  optimize.html  utils.html  visualization.html
_sources/: copulas.bivariate.rst.txt  copulas.multivariate.rst.txt  copulas.rst.txt  copulas.univariate.rst.txt  install.rst.txt  installation.rst.txt
_sources/api/: copulas.bivariate.base.rst.txt  copulas.bivariate.clayton.rst.txt  copulas.bivariate.frank.rst.txt  copulas.bivariate.gumbel.rst.txt  copulas.bivariate.independence.rst.txt  copulas.bivariate.rst.txt  copulas.bivariate.utils.rst.txt  copulas.datasets.rst.txt  copulas.errors.rst.txt  copulas.multivariate.base.rst.txt  copulas.multivariate.gaussian.rst.txt  copulas.multivariate.rst.txt  copulas.multivariate.tree.rst.txt  copulas.multivariate.vine.rst.txt  copulas.optimize.rst.txt  copulas.rst.txt  copulas.univariate.base.rst.txt  copulas.univariate.beta.rst.txt  copulas.univariate.gamma.rst.txt  copulas.univariate.gaussian.rst.txt  copulas.univariate.gaussian_kde.rst.txt  copulas.univariate.kde.rst.txt  copulas.univariate.log_laplace.rst.txt  copulas.univariate.rst.txt  copulas.univariate.selection.rst.txt  copulas.univariate.student_t.rst.txt  copulas.univariate.truncated_gaussian.rst.txt  copulas.univariate.truncnorm.rst.txt  copulas.univariate.uniform.rst.txt  copulas.utils.rst.txt  copulas.visualization.rst.txt  modules.rst.txt
_sources/tutorials/: 01_Introduction_to_Copulas.ipynb.txt  02_Univariate_Distributions.ipynb.txt
_static/: documentation_options.js
_static/js/: versions.js
api/: copulas.bivariate.base.html  copulas.bivariate.clayton.html  copulas.bivariate.frank.html  copulas.bivariate.gumbel.html  copulas.bivariate.html  copulas.bivariate.independence.html  copulas.bivariate.utils.html  copulas.datasets.html  copulas.errors.html  copulas.html  copulas.multivariate.base.html  copulas.multivariate.gaussian.html  copulas.multivariate.html  copulas.multivariate.tree.html  copulas.multivariate.vine.html  copulas.optimize.html  copulas.univariate.base.html  copulas.univariate.beta.html  copulas.univariate.gamma.html  copulas.univariate.gaussian.html  copulas.univariate.gaussian_kde.html  copulas.univariate.html  copulas.univariate.kde.html  copulas.univariate.log_laplace.html  copulas.univariate.selection.html  copulas.univariate.student_t.html  copulas.univariate.truncated_gaussian.html  copulas.univariate.truncnorm.html  copulas.univariate.uniform.html  copulas.utils.html  copulas.visualization.html  modules.html
conda/: README.md  meta.yaml
copulas/: BVCopula.py  GaussianCopula.py  MVCopula.py  __init__.py  _addons.py  cli.py  copulas.py  datasets.py  errors.py  example.py  main.py  models.py  sdmetrics.py  utils.py  utils2.py  visualization.py
copulas.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
copulas/bivariate/: BVCopula.py  Clayton.py  Frank.py  Gumbel.py  __init__.py  base.py  bv_copula.py  clayton.py  copulas.py  frank.py  gumbel.py  independence.py  joe.py  utils.py
copulas/datasets/: __init__.py
copulas/metrics/: __init__.py
copulas/multivariate/: GaussianCopula.py  MVCopula.py  RVine.py  Tree.py  VineCopula.py  __init__.py  base.py  gaussian.py  models.py  tree.py  vine.py
copulas/optimize/: __init__.py
copulas/univariate/: GaussianUnivariate.py  KDEUnivariate.py  UnivariateDistrib.py  UnivariateModel.py  __init__.py  base.py  beta.py  gamma.py  gaussian.py  gaussian_kde.py  hyper_laplace.py  kde.py  log_laplace.py  scipy.py  selection.py  student_t.py  truncated_gaussian.py  truncnorm.py  uniform.py
data/: breast_cancer.csv  example.csv  iris.data.csv
docs/: Makefile  conf.py  history.rst  index.md  index.rst  install.rst  installation.rst  make.bat  readme.md  usage.rst
documentation/: ijcai17.sty  nips_2017.sty  sdv_copula.aux  sdv_copula.tex
examples/: 1_univariate.ipynb  2_gaussian_copula.ipynb  3_boston_housing.ipynb  3_iris.ipynb  4_vine_copula.ipynb  5_bivariate_copulas.ipynb  6_validate_copula_with_r.ipynb  copulas_example.py  example.py  example_aws.ipynb  utils.py
script/: release_notes_generator.py
scripts/: release_notes_generator.py
src/: CopulaGAN.py  LSTM_controller.py  rnn_cell_util.py
tests/: __init__.py  atm_datasets.py  large_scale_evaluation.py  test_cli.py  test_copulas.py  test_end_to_end.py  test_tasks.py  test_utils.py
tests/bivariate/: test_copula_selection.py
tests/copulas/: test___init__.py  test_utils.py
tests/end-to-end/: README.md  __init__.py  test___init__.py  test_utils.py  (+1 more)
tutorials/: 00_Quickstart.html  00_Quickstart.ipynb  01_Introduction_to_Copulas.html  01_Introduction_to_Copulas.ipynb  02_Univariate_Distributions.html  03_Multivariate_Distributions.html  03_Multivariate_Distributions.ipynb  04_Syntehtic_Data_for_Machine_Learning.html  04_Syntehtic_Data_for_Machine_Learning.ipynb  04_Synthetic_Data_for_Machine_Learning.html  0_review.ipynb  1_bivariate.ipynb  1_introduction.ipynb  2_multivariate.ipynb  2_synthetic_ml.ipynb  3_applications.ipynb  3_univariate.ipynb  4_multivariate.ipynb  README Quickstart.html  README Quickstart.ipynb  getting_started.ipynb
(+225 files in other folders)
