[project]
name = 'copulas'
description = 'Create tabular synthetic data using copulas-based modeling.'
authors = [{name = 'DataCebo, Inc.', email = 'info@sdv.dev' }]
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: Free for non-commercial use',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
]
keywords = [ 'copulas' ]
dynamic = ["version"]
license = { text = 'BSL-1.1' }
requires-python = '>=3.8,<3.13'
readme = 'README.md'
dependencies = [
    "numpy>=1.21.0;python_version<'3.10'",
    "numpy>=1.23.3;python_version>='3.10' and python_version<'3.12'",
    "numpy>=1.26.0;python_version>='3.12'",
    "pandas>=1.4.0;python_version<'3.10'",
    "pandas>=1.4.0;python_version>='3.10' and python_version<'3.11'",
    "pandas>=1.5.0;python_version>='3.11' and python_version<'3.12'",
    "pandas>=2.1.1;python_version>='3.12'",
    'plotly>=5.10.0',
    "scipy>=1.8.0;python_version<'3.10'",
    "scipy>=1.9.2;python_version>='3.10' and python_version<'3.12'",
    "scipy>=1.12.0;python_version>='3.12'",
]

[project.urls]
"Source Code"= "https://github.com/sdv-dev/Copulas/"
"Issue Tracker" = "https://github.com/sdv-dev/Copulas/issues"
"Changes" = "https://github.com/sdv-dev/Copulas/blob/main/HISTORY.md"
"Twitter" = "https://twitter.com/sdv_dev"
"Chat" = "https://bit.ly/sdv-slack-invite"

[build-system]
requires = ['setuptools', 'wheel']
build-backend = 'setuptools.build_meta'

[tool.setuptools.dynamic]
version = {attr = 'copulas.__version__'}

[project.optional-dependencies]
tutorials = [
    'markupsafe<=2.0.1',
    "scikit-learn>=0.24,<1.2;python_version<'3.10'",
    "scikit-learn>=0.24,<1.5;python_version>='3.10' and python_version<'3.12'",
    "scikit-learn>=1.3.1;python_version>='3.12'",
    'jupyter>=1.0.0,<2',
]
test = [
    'copulas[tutorials]',
    'pytest>=6.2.5,<7',
    'pytest-cov>=2.6.0,<3',
    'pytest-rerunfailures>=10.3,<15',
    'rundoc>=0.4.3,<0.5',
    'tomli>=2.0.0,<3',
]
dev = [
    'copulas[tutorials, test]',

    # general
    'pip>=9.0.1',
    'build>=1.0.0,<2',
    'bump-my-version>=0.18.3,<1',
    'watchdog>=1.0.1,<5',

    # docs
    'm2r>=0.2.0,<0.3',
    'nbsphinx>=0.5.0,<0.7',
    'Sphinx>=1.7.1,<3',
    'sphinx_rtd_theme>=0.2.4,<0.5',
    'sphinxcontrib_applehelp<1.0.8',
    'sphinxcontrib-devhelp<1.0.6',
    'sphinxcontrib-htmlhelp<2.0.5',
    'sphinxcontrib_serializinghtml<1.1.10',
    'sphinxcontrib_qthelp<1.0.7',
    'alabaster<0.7.13',

    # Jinja2>=3 makes the sphinx theme fail
    "Jinja2>=2,<3;python_version<'3.12'",
    "Jinja2>=2,<4;python_version>='3.12'",

    # style check
    'flake8>=3.7.7,<8',
    'flake8-absolute-import>=1.0,<2',
    'flake8-builtins>=1.5.3,<3',
    'flake8-comprehensions>=3.6.1,<4',
    'flake8-debugger>=4.0.0,<5',
    'flake8-docstrings>=1.5.0,<2',
    'flake8-eradicate>=1.1.0,<2',
    'flake8-fixme>=1.1.1,<1.2',
    'flake8-mock>=0.3,<1',
    'flake8-multiline-containers>=0.0.18,<0.1',
    'flake8-mutable>=1.2.0,<1.3',
    'flake8-expression-complexity>=0.0.9,<0.1',
    'flake8-print>=4.0.0,<4.1',
    'flake8-pytest-style>=2.0.0,<3',
    'flake8-quotes>=3.3.0,<4',
    'flake8-sfs>=0.0.3,<2',
    'flake8-variables-names>=0.0.4,<0.1',
    'dlint>=0.11.0,<1',
    'isort>=5.13.2,<6',
    'pandas-vet>=0.2.3,<2024',
    'pep8-naming>=0.12.1,<1',
    'pydocstyle>=6.1.1,<7',

    # fix style issues
    'autoflake>=1.1,<3',
    'autopep8>=1.4.3,<3',

    # distribute on PyPI
    'twine>=1.10.0,<4',
    'wheel>=0.30.0',

    # Advanced testing
    'coverage>=4.5.1,<6',
    'tox>=2.9.1,<4',
    'invoke',

    # Documentation style
    'doc8>=0.8.0,<0.9',

    # Large scale evaluation
    'urllib3>=1.20,<1.26',
    'tabulate>=0.8.3,<0.9',
    'boto3>=1.7.47,<1.10',
    'docutils>=0.10,<0.15'
]

[tool.isort]
line_length = 99
lines_between_types = 0
multi_line_output = 4
use_parentheses = true

[tool.pydocstyle]
convention = 'google'
add-ignore = ['D107', 'D407', 'D417']

[tool.setuptools]
include-package-data = true
license-files = ['LICENSE']

[tool.setuptools.packages.find]
include = ['copulas', 'copulas.*']
namespaces = false

[tool.setuptools.package-data]
'*' = [
    'AUTHORS.rst',
    'CONTRIBUTING.rst',
    'HISTORY.md',
    'README.md',
    'RELEASE.md',
    '*.md',
    '*.rst',
    'conf.py',
    'Makefile',
    'make.bat',
    '*.jpg',
    '*.png',
    '*.gif'
]

[tool.setuptools.exclude-package-data]
'*' = [
    '* __pycache__',
    '*.py[co]',
    'static_code_analysis.txt',
]

[tool.bumpversion]
current_version = "0.11.1.dev0"
commit = true
tag = true
parse = '(?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\.(?P<release>[a-z]+)(?P<candidate>\d+))?'
serialize = [
	'{major}.{minor}.{patch}.{release}{candidate}',
	'{major}.{minor}.{patch}'
]

[tool.bumpversion.parts.release]
optional_value = 'release'
values = [
	'dev',
	'release'
]

[[tool.bumpversion.files]]
filename = 'copulas/__init__.py'
search = "__version__ = '{current_version}'"
replace = "__version__ = '{new_version}'"

