[project]
name = 'copulas'
description = 'Create tabular synthetic data using copulas-based modeling.'
authors = [{name = 'DataCebo, Inc.', email = 'info@sdv.dev' }]
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: Free for non-commercial use',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
]
keywords = [ 'copulas' ]
dynamic = ["version"]
license = { text = 'BSL-1.1' }
requires-python = '>=3.8,<3.13'
readme = 'README.md'
dependencies = [
    "numpy>=1.21.0;python_version<'3.10'",
    "numpy>=1.23.3;python_version>='3.10' and python_version<'3.12'",
    "numpy>=1.26.0;python_version>='3.12'",
    "pandas>=1.4.0;python_version<'3.11'",
    "pandas>=1.5.0;python_version>='3.11' and python_version<'3.12'",
    "pandas>=2.1.1;python_version>='3.12'",
    'plotly>=5.10.0',
    "scipy>=1.7.3;python_version<'3.10'",
    "scipy>=1.9.2;python_version>='3.10' and python_version<'3.12'",
    "scipy>=1.12.0;python_version>='3.12'",
]

[project.urls]
"Source Code"= "https://github.com/sdv-dev/Copulas/"
"Issue Tracker" = "https://github.com/sdv-dev/Copulas/issues"
"Changes" = "https://github.com/sdv-dev/Copulas/blob/main/HISTORY.md"
"Twitter" = "https://twitter.com/sdv_dev"
"Chat" = "https://bit.ly/sdv-slack-invite"

[build-system]
requires = ['setuptools', 'wheel']
build-backend = 'setuptools.build_meta'

[tool.setuptools.dynamic]
version = {attr = 'copulas.__version__'}

[project.optional-dependencies]
tutorials = [
    'markupsafe<=2.0.1',
    "scikit-learn>=0.24;python_version<'3.12'",
    "scikit-learn>=1.3.1;python_version>='3.12'",
    'jupyter>=1.0.0,<2',
]
test = [
    'copulas[tutorials]',
    'pytest>=6.2.5,<7',
    'pytest-cov>=2.6.0,<3',
    'pytest-rerunfailures>=10.3,<15',
    'rundoc>=0.4.3,<0.5',
    'tomli>=2.0.0,<3',
]
dev = [
    'copulas[tutorials, test]',

    # general
    'pip>=9.0.1',
    'build>=1.0.0,<2',
    'bump-my-version>=0.18.3,<1',
    'watchdog>=1.0.1,<5',

    # docs
    'm2r>=0.2.0,<0.3',
    'nbsphinx>=0.5.0,<0.7',
    'Sphinx>=1.7.1,<3',
    'sphinx_rtd_theme>=0.2.4,<0.5',
    'sphinxcontrib_applehelp<1.0.8',
    'sphinxcontrib-devhelp<1.0.6',
    'sphinxcontrib-htmlhelp<2.0.5',
    'sphinxcontrib_serializinghtml<1.1.10',
    'sphinxcontrib_qthelp<1.0.7',
    'alabaster<0.7.13',

    # Jinja2>=3 makes the sphinx theme fail
    "Jinja2>=2,<3;python_version<'3.12'",
    "Jinja2>=2,<4;python_version>='3.12'",

    # style check
    'ruff>=0.3.2,<1',

    # distribute on PyPI
    'twine>=1.10.0,<4',
    'wheel>=0.30.0',

    # Advanced testing
    'coverage>=4.5.1,<6',
    'tox>=2.9.1,<4',
    'invoke',

    # Large scale evaluation
    'urllib3>=1.20,<1.26',
    'tabulate>=0.8.3,<0.9',
    'boto3>=1.7.47,<1.10',
    'docutils>=0.10,<0.15'
]

[tool.isort]
line_length = 99
lines_between_types = 0
multi_line_output = 4
use_parentheses = true

[tool.pydocstyle]
convention = 'google'
add-ignore = ['D107', 'D407', 'D417']

[tool.setuptools]
include-package-data = true
license-files = ['LICENSE']

[tool.setuptools.packages.find]
include = ['copulas', 'copulas.*']
namespaces = false

[tool.setuptools.package-data]
'*' = [
    'AUTHORS.rst',
    'CONTRIBUTING.rst',
    'HISTORY.md',
    'README.md',
    'RELEASE.md',
    '*.md',
    '*.rst',
    'conf.py',
    'Makefile',
    'make.bat',
    '*.jpg',
    '*.png',
    '*.gif'
]

[tool.setuptools.exclude-package-data]
'*' = [
    '* __pycache__',
    '*.py[co]',
    'static_code_analysis.txt',
]

[tool.bumpversion]
current_version = "0.12.0.dev0"
commit = true
tag = true
parse = '(?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\.(?P<release>[a-z]+)(?P<candidate>\d+))?'
serialize = [
	'{major}.{minor}.{patch}.{release}{candidate}',
	'{major}.{minor}.{patch}'
]

[tool.bumpversion.parts.release]
optional_value = 'release'
values = [
	'dev',
	'release'
]

[[tool.bumpversion.files]]
filename = 'copulas/__init__.py'
search = "__version__ = '{current_version}'"
replace = "__version__ = '{new_version}'"

[tool.ruff]
preview = true
line-length = 100
indent-width = 4
src = ["copulas"]
target-version = "py312"
exclude = [
    "docs",
    ".tox",
    ".git",
    "__pycache__",
    ".ipynb_checkpoints",
    "*.ipynb",
    "tasks.py",
]

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # pydocstyle
    "D",
    # isort
    "I001",
    # print statements
    "T201",
    # pandas-vet
    "PD",
    # numpy 2.0
    "NPY201"
]
ignore = [
    # pydocstyle
    "D107",  # Missing docstring in __init__
    "D417",   # Missing argument descriptions in the docstring, this is a bug from pydocstyle: https://github.com/PyCQA/pydocstyle/issues/449
    "PD901",
    "PD101",
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
preview = true
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint.isort]
known-first-party = ["copulas"]
lines-between-types = 0

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "E402", "F403", "F405", "E501", "I001"]
"errors.py" = ["D105"]
"tests/**.py" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pycodestyle]
max-doc-length = 100
max-line-length = 100
